--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,15 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: #213547;
   background-color: #ffffff;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 a {
@@ -19,102 +18,80 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
+  color: #213547;
+  background-color: #ffffff;
 }
 
-h1 {
-  font-size: 3em;
-  margin: 0px;
-}
-h4 {
-  margin: 0px 0px 10px 0px;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-form label {
-  font-size: 20px;
-  padding-left: 4px;
-  font-family: RingBearer;
-}
-
-form input {
-  font-size: 15px;
-  padding-left: 4px;
-  font-family: MorrisRoman;
-}
-
-form input:not([type="submit"]) {
-  width: 300px;
-}
-
-input[type="submit"] {
-  padding: 10px;
-}
-
-form label {
-  margin-right: 10px;
-  flex: 1;
+form {
+  margin: 20px;
+  width: 100%;
+  max-width: 600px;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .input-wrap {
-  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 10px;
-  display: flex;
-  justify-content: space-between;
 }
 
-#phone-input-1 {
-  width: 30px;
-}
-#phone-input-2 {
-  width: 30px;
-}
-#phone-input-3 {
-  width: 30px;
-}
-#phone-input-4 {
-  width: 30px;
+.input-wrap label {
+  font-size: 20px;
+  font-family: RingBearer;
+  padding-left: 4px;
+  flex: 1;
+  margin-right: 10px;
 }
 
-#phone-input-1,
-#phone-input-2,
-#phone-input-3,
-#phone-input-4 {
-  text-align: center;
-}
-
-#phone-input-wrap {
-  display: flex;
-  justify-content: space-between;
+.input-wrap .text-input,
+.input-wrap input[type="text"],
+.input-wrap input[type="email"],
+.input-wrap select {
+  font-size: 15px;
+  font-family: MorrisRoman;
+  padding: 8px;
+  width: 100%;
+  height: 30px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
   flex: 2;
-  width: 400px;
+}
+
+input[type="submit"] {
+  width: auto;
+  background-color: #1a1a1a;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 1em;
+  font-weight: 500;
+}
+
+input[type="submit"]:hover {
+  background-color: #535bf2;
 }
 
 .error-message {
@@ -128,37 +105,44 @@ form label {
   font-size: 15px;
 }
 
-form label {
-  margin-right: 10px;
-  flex: 1;
-}
-
-.input-wrap {
-  flex: 1;
-  margin-bottom: 10px;
+.phone-input-container {
   display: flex;
-  justify-content: space-between;
+  margin-bottom: 1rem;
+  margin-left: 35px;
 }
 
-#phone-input-1 {
-  width: 30px;
-}
-#phone-input-2 {
-  width: 30px;
-}
-#phone-input-3 {
-  width: 30px;
+.phone-input-container label {
+  margin-right: 50px;
 }
 
-#phone-input-1,
-#phone-input-2,
-#phone-input-3,
-#phone-input-4 {
+.phone-inputs {
+  display: flex;
+  gap: 1rem;
+}
+
+.phone-inputs input[type="text"] {
+  width: 50px;
+  height: 30px;
+  padding: 0.5rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
-#phone-input-wrap {
+.profile-info-container {
+  border: 5px solid black;
+  padding: 10px;
+}
+
+.no-info {
+  border: 5px solid black;
+  padding: 10px;
   display: flex;
-  justify-content: space-between;
-  flex: 2;
+  justify-content: center;
+  align-items: center;
+  max-width: 200px;
+  margin: 0 auto;
+}
+
+.profile-info-title {
+  text-decoration: underline;
 }
