--- a/src/index.css
+++ b/src/index.css
@@ -40,40 +40,45 @@ body {
 form {
   margin: 20px;
   width: 100%;
-  max-width: 600px;
-  box-sizing: border-box;
-  overflow: hidden;
 }
 
 .input-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: auto;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.input-wrap label {
-  font-size: 20px;
-  font-family: RingBearer;
-  padding-left: 4px;
-  flex: 1;
-  margin-right: 10px;
-}
-
-.input-wrap .text-input,
-.input-wrap input[type="text"],
-.input-wrap input[type="email"],
-.input-wrap select {
+.text-input {
+  width: 350px;
+  height: 30px;
+  padding: 4px;
   font-size: 15px;
   font-family: MorrisRoman;
+}
+
+label {
+  display: block;
+  max-width: 50px;
+  font-size: 20px;
+  padding-left: 4px;
+  padding-right: 10px;
+  font-family: RingBearer;
+}
+
+input[type="text"],
+input[type="email"],
+select {
+  font-size: 15px;
+  padding-left: 4px;
+  font-family: MorrisRoman;
   padding: 8px;
-  width: 100%;
-  height: 30px;
-  margin: 5px 0;
+  margin: 5px 0 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  flex: 2;
 }
 
 input[type="submit"] {
@@ -95,6 +100,9 @@ input[type="submit"]:hover {
 }
 
 .error-message {
+  display: block;
+  width: -webkit-fill-available;
+  max-width: 500px;
   border: 1px solid black;
   padding: 2px;
   color: white;
@@ -107,30 +115,34 @@ input[type="submit"]:hover {
 
 .phone-input-container {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 1rem;
-  margin-left: 35px;
-}
-
-.phone-input-container label {
-  margin-right: 50px;
+  justify-content: center;
 }
 
 .phone-inputs {
   display: flex;
-  gap: 1rem;
+  align-items: center;
+  gap: 10px;
+  margin-left: 25px;
 }
 
-.phone-inputs input[type="text"] {
+.dash {
+  margin: 0 5px;
+}
+
+.phone-input {
   width: 50px;
-  height: 30px;
   padding: 0.5rem;
   text-align: center;
-  box-sizing: border-box;
 }
 
 .profile-info-container {
   border: 5px solid black;
   padding: 10px;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 .no-info {
